<resources>
    <string name="app_name">OSA Diagnosis App For Huawei GT3 Smartwatch</string>
    <string name="start_diagnosis">Start Diagnosis</string>
    <string name="back_to_dashboard">Back to Home</string>
    <string name="about_osa">About OSA</string>
    <string name="manual_set">Manual Set</string>
    <string name="auto_set">Auto Set</string>
    <string name="back_to_previous_screen">Back to Previous Screen</string>
    <string name="confirm">Confirm</string>
</resources>