<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManualSet">

    <Button
        android:id="@+id/confirmManualSet"
        android:layout_width="175dp"
        android:layout_height="70dp"
        android:layout_marginBottom="200dp"
        android:backgroundTint="#CDDC39"
        android:onClick="loadManualSetWaitPage"
        android:text="@string/confirm"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/backToDiagnosisOptions2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="76dp"
        android:clickable="true"
        android:contentDescription="@string/back_to_previous_screen"
        android:focusable="true"
        android:foregroundTint="#FFFFFF"
        android:onClick="loadDiagnosisOptionsPage"
        app:backgroundTint="#CDDC39"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="#FFFFFF"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <Button
        android:id="@+id/backToDashboard4"
        android:layout_width="175dp"
        android:layout_height="70dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="72dp"
        android:backgroundTint="#CDDC39"
        android:onClick="loadDashboardPage"
        android:text="@string/back_to_dashboard"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>